--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@t-cli/core",
-	"version": "1.0.1",
+	"version": "1.0.0",
 	"description": "t-cli core",
 	"author": "fengxie <1015806955@qq.com>",
 	"homepage": "",
@@ -20,6 +20,7 @@
 		"test": "echo \"Run testing from utils\""
 	},
 	"dependencies": {
-		"@t-cli/utils": "workspace:^"
-	}
+		"@t-cli/utils": "^1.0.1"
+	},
+	"gitHead": "ab5c5a01d71e055301b207fbb2f199933f584ae1"
 }
