--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
 	"name": "t-cli",
 	"version": "1.0.0",
 	"description": "",
-	"main": "./bin/index.js",
-	"type": "module",
-	"bin": {
-		"t-cli": "./bin/index.js"
-	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -17,6 +12,6 @@
 		"lerna": "^8.1.2"
 	},
 	"dependencies": {
-		"fengxie-common-ui": "^1.0.0"
+		"import-local": "^3.1.0"
 	}
 }
