--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
+	"type": "module",
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"lerna": "^8.1.2"
+		"eslint-config-prettier": "^9.1.0",
+		"lerna": "^8.1.2",
+		"prettier": "3.2.5"
 	},
 	"dependencies": {
+		"@eslint/js": "^9.2.0",
+		"globals": "^15.1.0",
 		"import-local": "^3.1.0"
 	}
 }
