--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,11 @@
 {
-	"$schema": "node_modules/lerna/schemas/lerna-schema.json",
-	"version": "1.0.2",
-	"packages": ["core/*", "commands/*", "models/*", "utils/*"],
-	"npmClient": "pnpm"
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+  "version": "1.0.3",
+  "packages": [
+    "core/*",
+    "commands/*",
+    "models/*",
+    "utils/*"
+  ],
+  "npmClient": "pnpm"
 }
