--- a/core/exec/package.json
+++ b/core/exec/package.json
@@ -15,7 +15,8 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "https://registry.npmmirror.com/"
+    "registry": "https://registry.npmmirror.com/",
+    "access": "public"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,8 @@
     "url": "https://github.com/fengxielove/t-cli/issues"
   },
   "dependencies": {
-    "@t-cli/log": "workspace:*",
-    "@t-cli/package": "workspace:*"
-  }
+    "@t-cli/log": "1.0.6",
+    "@t-cli/package": "1.0.6"
+  },
+  "gitHead": "a9e4838fa9e19e35ac8e9f05e50a35e00ed1863e"
 }
