--- a/utils/format-path/package.json
+++ b/utils/format-path/package.json
@@ -15,7 +15,7 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "https://registry.npmmirror.com/",
+    "registry": "https://registry.npmjs.org/",
     "access": "public"
   },
   "repository": {
