fix:update dependencies

--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -25,10 +25,10 @@
 		"test": "echo \"Run testing from utils\""
 	},
 	"dependencies": {
-		"@t-cli/exec": "1.0.6",
-		"@t-cli/get-npm-info": "1.0.6",
-		"@t-cli/init": "1.0.6",
-		"@t-cli/log": "1.0.6",
+		"@t-cli/exec": "workspace:*",
+		"@t-cli/get-npm-info": "workspace:*",
+		"@t-cli/init": "workspace:*",
+		"@t-cli/log": "workspace:*",
 		"chalk": "^5.1.0",
 		"commander": "^12.0.0",
 		"dotenv": "^16.4.5",
