--- a/models/package/package.json
+++ b/models/package/package.json
@@ -29,9 +29,9 @@
     "url": "https://github.com/fengxielove/t-cli/issues"
   },
   "dependencies": {
-    "@t-cli/format-path": "1.0.6",
-    "@t-cli/get-npm-info": "1.0.6",
-    "@t-cli/utils": "1.0.6",
+    "@t-cli/format-path": "workspace:*",
+    "@t-cli/get-npm-info": "workspace:*",
+    "@t-cli/utils": "workspace:*",
     "fs-extra": "^11.2.0",
     "npminstall": "^7.12.0",
     "path-exists": "^5.0.0",
