--- a/models/command/package.json
+++ b/models/command/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@t-cli/command",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "a command manager for t-cli",
   "author": "fengxie <1015806955@qq.com>",
   "homepage": "https://github.com/fengxielove/t-cli#readme",
@@ -29,9 +29,9 @@
     "url": "https://github.com/fengxielove/t-cli/issues"
   },
   "dependencies": {
-    "chalk": "^5.1.0",
-    "semver": "^7.6.0",
     "@t-cli/log": "workspace:*",
-    "@t-cli/utils": "workspace:*"
+    "@t-cli/utils": "workspace:*",
+    "chalk": "^5.1.0",
+    "semver": "^7.6.0"
   }
 }
