--- a/models/package/package.json
+++ b/models/package/package.json
@@ -32,6 +32,7 @@
     "@t-cli/format-path": "workspace:*",
     "@t-cli/get-npm-info": "workspace:*",
     "@t-cli/utils": "workspace:*",
+    "@t-cli/log": "workspace:*",
     "fs-extra": "^11.2.0",
     "npminstall": "^7.12.0",
     "path-exists": "^5.0.0",
