--- a/commands/init/package.json
+++ b/commands/init/package.json
@@ -35,8 +35,12 @@
     "@t-cli/package": "workspace:*",
     "@t-cli/request": "workspace:*",
     "@t-cli/utils": "workspace:*",
+    "ejs": "^3.1.10",
     "fs-extra": "^11.2.0",
+    "glob": "^10.3.14",
     "inquirer": "^9.2.20",
+    "kebab-case": "^1.0.2",
+    "path-exists": "^5.0.0",
     "semver": "^7.6.0",
     "userhome": "^1.0.0"
   }
