feat: 修改为当前进程执行，添加custom项目创建成功回调

--- a/core/exec/package.json
+++ b/core/exec/package.json
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "@t-cli/log": "workspace:*",
-    "@t-cli/package": "workspace:*"
+    "@t-cli/package": "workspace:*",
+    "@t-cli/utils": "workspace:*"
   },
   "gitHead": "a9e4838fa9e19e35ac8e9f05e50a35e00ed1863e"
 }
